gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/b20011.d
version https://git-lfs.github.com/spec/v1
oid sha256:02cc31103b507476939222886a3781a6ce14c7329f6d9d89c1febce33245fe39
size 2060
